--- a/homework_5/fs_product_styles.css
+++ b/homework_5/fs_product_styles.css
@@ -63,8 +63,8 @@ body {
 
 #pagegrid {
     display: grid;
-    grid-template-columns: 64px repeat(3,105px) 123px repeat(4,105px) 217px;
-    grid-template-rows: 64px 47px 68px 32px 98px 42px 35px 98px 82px 240px 1fr;
+    grid-template-columns: 158px repeat(3,89px) 180px repeat(4,89px) 290px;
+    grid-template-rows: 64px 62px 35px 32px 65px 42px 35px 88px 82px;
     justify-content: center;
 }
 
@@ -114,7 +114,6 @@ body {
     grid-row-start: 3;
     grid-column: 6 / span 3;
     align-self: end;
-    padding-bottom: 5px;
 }
 
 #currentcolor {
@@ -150,11 +149,10 @@ body {
     grid-row-start: 6;
     grid-column: 6 / span 3;
     align-self: end;
-    padding-bottom: 8px;
 }
 
 #choosecolor , #fill {
-    font-size: 24px;
+    font-size: 20px;
 }
 
 #currentfill {
@@ -163,7 +161,7 @@ body {
 }
 
 #currentcolor, #currentfill {
-    font-size: 18px;
+    font-size: 16px;
     font-style: italic;
 }
 
@@ -187,29 +185,30 @@ body {
 
 #aboutfill {
     grid-row-start: 9;
-    grid-column: 6 / span 2;
+    grid-column: 6 / span 4;
     justify-self: center;
-    padding-top: 20px;
     padding-right: 20px;
     color: #A9A9A9
 }
 
 #sizing {
-    grid-row-start: 9;
-    grid-column: 8 / span 2;
+    grid-row-start: -2;
+    grid-column: -2;
     justify-self: center;
-    padding-top: 20px;
     padding-right: 20px;
     color: #A9A9A9
 
 }
 
 #qty {
-    grid-row-start: 2;
+    grid-row-start: 3;
     grid-column-start: -2;
+    justify-self: end;
 }
 
 #addtocart {
-    grid-row-start: 3;
+    grid-row-start: 2;
     grid-column-start: -2;
+    justify-self: end;
+
 }
