--- a/homework_5/fs_style.css
+++ b/homework_5/fs_style.css
@@ -8,7 +8,7 @@ body {
    }
 nav {
     font-size: 21px;
-    color: #809BC6;
+    color: #FFFFFF;
     display: grid;
     grid-template-columns: 277px 1fr 90px 59px 45px;
     grid-template-areas: "logo . howto shop cart";
