--- a/homework_5/fs_product_styles.css
+++ b/homework_5/fs_product_styles.css
@@ -64,7 +64,7 @@ body {
 #pagegrid {
     display: grid;
     grid-template-columns: 158px repeat(3,89px) 180px repeat(4,89px) 290px;
-    grid-template-rows: 64px 62px 35px 32px 65px 42px 35px 88px 82px;
+    grid-template-rows: 64px 62px 35px 32px 65px 42px 35px 88px 160px 120px;
     justify-content: center;
 }
 
@@ -192,8 +192,8 @@ body {
 }
 
 #sizing {
-    grid-row-start: -2;
-    grid-column: -2;
+    grid-row-start: 10;
+    grid-column: 6 / span 4;
     justify-self: center;
     padding-right: 20px;
     color: #A9A9A9
