--- a/homework_6/fs_product_styles.css
+++ b/homework_6/fs_product_styles.css
@@ -145,7 +145,7 @@ body {
     grid-column-start: 6;
     align-self: initial;
     border-style: solid;
-    border-color: #809BC6;
+    border-color: #863522;
     /* marsala: #863522 */
     border-width: 3px;
 }
@@ -193,7 +193,7 @@ body {
     grid-column-start: 6;
     align-self: initial;
     border-style: solid;
-    border-color: #809BC6;
+    border-color: #863522;
     border-width: 3px;
 }
 
