--- a/homework_6/cart_style.css
+++ b/homework_6/cart_style.css
@@ -49,7 +49,7 @@ nav {
     text-align: center;
     vertical-align: middle;
     border-radius: 50%;
-    background: #863522;
+    background: #FFFFFF;
 }
 
 #bar {
@@ -85,7 +85,7 @@ body {
 
 #flow {
     grid-area: flow;
-    align-self: center;
+    padding-top: 150px;
     text-align: center;
     font-size: 21px;
 }
@@ -115,37 +115,20 @@ body {
 .item {
     display: grid;
     grid-template-columns: 50px 120px 220px 40px 1fr;
-    grid-template-rows: 40px 20px 25px 30px 50px 40px 20px 25px 30px;
-    /* grid-template-areas: "x img desc qty" */
+    grid-template-rows: 40px 20px 25px 30px;
+    Padding-top: 25px;
+    Padding-bottom: 25px;
 }
 
-/* #img1, #img2 {
-    justify-self: end;
-} */
-/* 
-#yourcart {
-    grid-column: 1 / span 2;
-} */
 
 #x1 {
     grid-column: 1;
     grid-row: 2;
 }
 
-#x2 {
-    grid-column: 1;
-    grid-row: 7;
-}
-
 #img1 {
     grid-column: 2;
     grid-row: 1 / span 3;
-    padding-left: 20px;
-}
-
-#img2 {
-    grid-column: 2;
-    grid-row: 6 / span 3;
     padding-left: 20px;
 }
 
@@ -155,23 +138,12 @@ body {
     font-style: italic;
 }
 
-#color2 {
-    grid-column: 3;
-    grid-row: 7;
-    font-style: italic;
-}
-
 #name1 {
     font-size: 24px;
     grid-column: 3;
     grid-row: 1;
 }
 
-#name2 {
-    grid-column: 3;
-    grid-row: 6;
-    font-size: 24px;
-}
 
 #fill1 {
     grid-column: 3;
@@ -179,11 +151,6 @@ body {
     font-style: italic;
 }
 
-#fill2 {
-    grid-column: 3;
-    grid-row: 8;
-    font-style: italic;
-}
 
 #edit1 {
     grid-column: 3;
@@ -192,23 +159,10 @@ body {
     align-self: end;
 }
 
-#edit2 {
-    grid-column: 3;
-    grid-row: 9;
-    color: #863522;
-    align-self: end;
-}
 
 #qty1 {
     grid-column: 5;
     grid-row: 3;
-    /* justify-self: end; */
-}
-
-#qty2 {
-    grid-column: 5;
-    grid-row: 8;
-    /* justify-self: end; */
 }
 
 #update1 {
@@ -216,24 +170,13 @@ body {
     grid-row: 4;
 }
 
-#update2 {
-    grid-column: 5;
-    grid-row: 9;
-}
 
 #price1 {
     grid-column: 5;
     grid-row: 1;
-    /* justify-self: end; */
     font-size: 24px;
 }
 
-#price2 {
-    grid-column: 5;
-    grid-row: 6;
-    /* justify-self: end; */
-    font-size: 24px;
-}
 
 .subtotal {
     display: grid;
@@ -256,10 +199,6 @@ body {
 #apply, #promo {
     margin-bottom: 10px;
 }
-
-/* #subprice, #taxprice, #shipcost {
-    justify-self: right;
-} */
 
 #sub, #subprice {
     font-size: 20px;
