--- a/homework_8/index_style.css
+++ b/homework_8/index_style.css
@@ -3,6 +3,23 @@ body {
     font-family: 'Khula', sans-serif;
 }
 
+button {
+  background-color: #DE9302;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.gallery {
+  margin: 0px 8% 0px 8%;
+  height: 600px;
+  overflow: scroll;
+}
+
 #name {
     font-size: 30px;
 }
@@ -15,6 +32,44 @@ body {
     padding-left: 20px;
 }
 
+div#radardiv {
+  height:300px
+}
+
+.overlay {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.overlay_text {
+  background-color: white;
+  padding: 5% 10% 5% 10%;
+}
+
+.img {
+  opacity: 1;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.thumbnail:hover .img {
+  opacity: 0.1;
+}
+
+.thumbnail:hover .overlay {
+  opacity: 1;
+}
+
+.text {
+  text-align: center;
+}
+
 hr {
     margin-top: 5px;
     margin-bottom: 0px;
@@ -24,6 +79,10 @@ hr {
 .icon {
     display: none;
   }
+
+/* .fa-bars:after{ */
+    /* content: "\f0c9"; */
+/* } */
   
   #rightnav a {
     color: black;
@@ -55,3 +114,4 @@ hr {
       text-align: right;
     }
   }
+
